--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -2,7 +2,7 @@
 <h1>
   <%= @wiki.title %> <br>
   <small>
-    submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= 'FIX THIS' %>
+    submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @user %>
   </small>
 </h1>
 
@@ -13,7 +13,7 @@
 
   <div class="col-md-4">
       <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-      <%= link_to "Delete Post", [@wiki], method: :delete , class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+      <%= link_to "Delete Post", [@wiki], method: :delete , class: 'btn btn-danger', data: {confirm: 'Are you sure you want to destroy this forever?'} %>
   </div>
   </div>
 </div>
