--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,4 +1,10 @@
 <%= form_tag charges_path do %>
-  <h4> Click the button! </h4>
-  <script class='stripe-button' src="https://checkout.stripe.com/checkout.js" data-key="<%= @stripe_btn_data[:key] %>" data-amount=<%= @stripe_btn_data[:amount] %> data-description="<%= @stripe_btn_data[:description] %>" ></script>
-<% end %>
+   <% if current_user.standard? %>
+      <h4>Upgrade Account</h4>
+      <script class='stripe-button' src="https://checkout.stripe.com/checkout.js" data-key="<%= @stripe_btn_data[:key] %>" data-amount="<%= @stripe_btn_data[:amount] %>" data-description="<%= @stripe_btn_data[:description] %>" >
+      </script>
+   <% elsif current_user.premium? %>
+      <h4>Downgrade Account</h4>
+      <%= link_to "Cancel Premium", downgrade_charge_path, class: "btn btn-danger" %>></script>
+   <% end %>
+ <% end %>
