--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -12,8 +12,13 @@
           <%= f.label :body %>
           <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
       </div>
-
       <%= f.submit "Save", class: 'btn btn-success' %>
-      <% end %>
-    </div>
+        <% if current_user.admin? || current_user.premium? %>
+            <div class="form-group">
+                <%= f.label :private, class: 'checkbox' do %>
+                <%= f.check_box :private %> Private wiki
+                <% end %>
+            </div>
+        <% end %>
+    <% end %>
 </div>
