--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -16,4 +16,10 @@
       <%= link_to "Delete Post", [@wiki], method: :delete , class: 'btn btn-danger', data: {confirm: 'Are you sure you want to destroy this forever?'} %>
   </div>
   </div>
+  <div class="row">
+    <div class="col-md-8">
+      <p>collaborators on this wiki include: </p>
+        <%= render @wiki.collaborators %>
+    </div>
+  </div>
 </div>
